cambio agregar alumno solo label

--- a/src/main/java/com/am/universidadejemplo/gui/agregarAlumnos.form
+++ b/src/main/java/com/am/universidadejemplo/gui/agregarAlumnos.form
@@ -132,7 +132,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="CRUD Alumnos"/>
+            <Property name="text" type="java.lang.String" value="Carga Alumnos"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
